Fixed an import error bug.

--- a/tfold/nets/mobilenet/mobilenet_example.ipynb
+++ b/tfold/nets/mobilenet/mobilenet_example.ipynb
@@ -228,7 +228,7 @@
       "outputs": [],
       "source": [
         "import tensorflow as tf\n",
-        "from nets.mobilenet import mobilenet_v2\n",
+        "from tfold.nets.mobilenet import mobilenet_v2\n",
         "\n",
         "tf.reset_default_graph()\n",
         "\n",
